Add styles for options buttons in checklist

--- a/src/screens/SmokeSystemChecklist.html
+++ b/src/screens/SmokeSystemChecklist.html
@@ -160,6 +160,21 @@
       cursor: pointer;
     }
   </style>
+  .options button {
+  background: #ddd;
+  border: none;
+  border-radius: 6px;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.options button.selected {
+  background: #ff6600;
+  color: #fff;
+  font-weight: 600;
+}
+
 </head>
 <body>
   <header>💨 Laudo de Sistema de Fumaça - Brivax</header>
