--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -5,6 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🔥 Laudo de Sistema de Incêndio - Brivax</title>
   <style>
+    .options button {
+  background: #ddd;
+  border: none;
+  border-radius: 6px;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.options button.selected {
+  background: #ff6600;
+  color: #fff;
+  font-weight: 600;
+}
+
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       background-color: #f4f4f4;
