--- a/src/screens/SmokeSystemChecklist.html
+++ b/src/screens/SmokeSystemChecklist.html
@@ -235,6 +235,59 @@
   <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
   <script src="../js/pdf-template.js"></script>
   <script>
+    <div id="signatureModal" style="
+  display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+  background:rgba(0,0,0,0.6); align-items:center; justify-content:center; z-index:9999;">
+  <div style="
+    background:#fff; padding:20px; border-radius:10px; text-align:center;
+    width:90%; max-width:400px;">
+    <h3>Assinatura</h3>
+    <canvas id="signaturePad" width="350" height="200" style="
+      border:1px solid #ccc; width:100%; border-radius:8px; margin-bottom:10px;"></canvas><br>
+    <button onclick="clearSignature()">Limpar</button>
+    <button onclick="saveSignature()">Salvar</button>
+    <button onclick="closeSignature()">Fechar</button>
+  </div>
+</div>
+
+<script>
+const modal = document.getElementById("signatureModal");
+const canvas = document.getElementById("signaturePad");
+const ctx = canvas.getContext("2d");
+let drawing = false, activeField = "";
+
+function openSignature(field){
+  activeField = field;
+  modal.style.display = "flex";
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+}
+function clearSignature(){ ctx.clearRect(0, 0, canvas.width, canvas.height); }
+function closeSignature(){ modal.style.display = "none"; }
+function saveSignature(){
+  localStorage.setItem(`assinatura_${activeField}`, canvas.toDataURL("image/png"));
+  alert(`✅ Assinatura de ${activeField} salva!`);
+  closeSignature();
+}
+
+canvas.addEventListener("mousedown", e => { drawing = true; ctx.moveTo(e.offsetX, e.offsetY); });
+canvas.addEventListener("mousemove", e => { if (drawing) { ctx.lineTo(e.offsetX, e.offsetY); ctx.stroke(); }});
+canvas.addEventListener("mouseup", () => { drawing = false; });
+canvas.addEventListener("touchstart", e => {
+  e.preventDefault();
+  drawing = true;
+  const rect = canvas.getBoundingClientRect();
+  ctx.moveTo(e.touches[0].clientX - rect.left, e.touches[0].clientY - rect.top);
+});
+canvas.addEventListener("touchmove", e => {
+  e.preventDefault();
+  if (!drawing) return;
+  const rect = canvas.getBoundingClientRect();
+  ctx.lineTo(e.touches[0].clientX - rect.left, e.touches[0].clientY - rect.top);
+  ctx.stroke();
+});
+canvas.addEventListener("touchend", () => drawing = false);
+</script>
+
     document.querySelectorAll('.options button').forEach(btn => {
   btn.addEventListener('click', () => {
     const group = btn.parentNode.querySelectorAll('button');
