--- a/src/screens/FireSystemChecklist.html
+++ b/src/screens/FireSystemChecklist.html
@@ -278,5 +278,8 @@
     canvas.addEventListener('touchmove', e => { if (!drawing) return; e.preventDefault(); const rect = canvas.getBoundingClientRect(); const touch = e.touches[0]; ctx.lineTo(touch.clientX - rect.left, touch.clientY - rect.top); ctx.stroke(); });
     canvas.addEventListener('touchend', () => drawing = false);
   </script>
+  <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+<script src="../js/pdf-template.js"></script>
+
 </body>
 </html>
